<resources>
    <string name="app_name">Learn to Count</string>
    <string name="intro">Aplikasi android sederhana untuk melatih anak SD belajar menghitung.</string>
    <string name="copyright">Learn to Learn merupakan aplikasi Android untuk melatih anak SD belajar menghitung.\n\nAplikasi ini dibuat untuk Assessment Mobpro1. Temukan kodenya di https://github.com/audyningrum27/Learn-to-Count\n\nCopyright © 2022 Nurul Qofifah Audyningrum.\nAll rights reserved.</string>
    <string name="satu">Pertanyaan 1</string>
    <string name="dua">Pertanyaan 2</string>
    <string name="tiga">Pertanyaan 3</string>
    <string name="empat">Pertanyaan 4</string>
    <string name="lima">Pertanyaan 5</string>
    <string name="jawab">Jawab</string>
    <string name="soal2_pil1">3 x 7</string>
    <string name="soal2_pil2">3 x 6</string>
    <string name="soal2_pil3">4 x 6</string>
    <string name="soal4_pil1">4 x 5</string>
    <string name="soal4_pil2">5 x 4</string>
    <string name="soal4_pil3">4 x 4</string>
    <string name="submit">SUBMIT</string>
    <string name="reset">RESET</string>
    <string name="marks">BENAR: %1$s</string>
    <string name="grade">NILAI: %1$d</string>
    <string name="one">1. %1$s %2$s</string>
    <string name="two">2. %1$s %2$s</string>
    <string name="three">3. %1$s %2$s</string>
    <string name="four">4. %1$s %2$s</string>
    <string name="five">5. %1$s %2$s</string>
    <string name="jwb1_invalid">Jawaban No.1 tidak boleh kosong</string>
    <string name="jwb2_invalid">Jawaban No.2 tidak boleh kosong</string>
    <string name="jwb3_invalid">Jawaban No.3 tidak boleh kosong</string>
    <string name="jwb4_invalid">Jawaban No.4 tidak boleh kosong</string>
    <string name="jwb5_invalid">Jawaban No.5 tidak boleh kosong</string>
    <string name="hanya_angka">Masukkan hanya bisa angka</string>
    <string name="about_apk">Tentang Aplikasi</string>
    <string name="key_1">Hasil dari 2 x 4 x 6 = <b>48</b></string>
    <string name="key_2">Perkalian bilangan yang hasilnya 24 adalah <b>4 x 6</b></string>
    <string name="key_3">13 x 3 = <b>39</b></string>
    <string name="key_4">Bentuk perkalian dari 4 + 4 + 4 + 4 + 4 adalah <b>4 x 5</b></string>
    <string name="key_5">1m sama dengan <b>100cm</b></string>
    <string name="answer_key">Kunci Jawaban</string>
    <string name="share">Bagikan</string>
    <string name="share_template">Saya mendapat skor: \n%1$s \n%2$s \nBuruan gunakan aplikasi Learn to Count</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="mark_x">BENAR: %1$s</string>
    <string name="grade_x">NILAI: %1$d</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="article">Artikel</string>
</resources>