<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/satuTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/satu"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/text">
        </TextView>

        <ImageView
            android:id="@+id/satuImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/satuTextView"
            android:src="@drawable/satu">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/soal1_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/satuImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/soal1_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/jawab" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/soal1_hint"/>

        <TextView
            android:id="@+id/duaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/dua"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider1">
        </TextView>

        <ImageView
            android:id="@+id/duaImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/duaTextView"
            android:src="@drawable/dua">
        </ImageView>

        <RadioGroup
            android:id="@+id/soal2RadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duaImageView" >

            <RadioButton
                android:id="@+id/soal2_pil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_weight="1"
                android:text="@string/soal2_pil1" />

            <RadioButton
                android:id="@+id/soal2_pil2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_weight="1"
                android:text="@string/soal2_pil2" />

            <RadioButton
                android:id="@+id/soal2_pil3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_weight="1"
                android:text="@string/soal2_pil3" />
        </RadioGroup>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/soal2RadioGroup"/>

        <TextView
            android:id="@+id/tigaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/tiga"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/divider2">
        </TextView>

        <ImageView
            android:id="@+id/tigaImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/tigaTextView"
            android:src="@drawable/tiga">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/soal3_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tigaImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/soal3_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/jawab" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/soal3_hint"/>

        <TextView
            android:id="@+id/empatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/empat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/divider3">
        </TextView>

        <ImageView
            android:id="@+id/empatImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/empatTextView"
            android:src="@drawable/empat">
        </ImageView>

        <RadioGroup
            android:id="@+id/soal4RadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empatImageView" >

            <RadioButton
                android:id="@+id/soal4_pil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_weight="1"
                android:text="@string/soal4_pil1" />

            <RadioButton
                android:id="@+id/soal4_pil2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_weight="1"
                android:text="@string/soal4_pil2" />

            <RadioButton
                android:id="@+id/soal4_pil3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:layout_weight="1"
                android:text="@string/soal4_pil3" />
        </RadioGroup>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/soal4RadioGroup"/>

        <TextView
            android:id="@+id/limaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/lima"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/divider4"
            app:layout_constraintTop_toTopOf="@+id/divider4">
        </TextView>

        <ImageView
            android:id="@+id/limaImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/limaTextView"
            android:src="@drawable/lima">
        </ImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/soal5_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/limaImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/soal5_inp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/jawab" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/soal5_hint"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reset"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5"
            app:layout_constraintVertical_bias="0.071" />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/submit"
            app:layout_constraintTop_toTopOf="@+id/submit" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/reset"/>

        <TextView
            android:id="@+id/marksTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/divider6"
            tools:text="BENAR: 4 dari 5 soal">
        </TextView>

        <TextView
            android:id="@+id/gradeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/marksTextView"
            tools:text="NILAI: 75">
        </TextView>

        <TextView
            android:id="@+id/no1TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/gradeTextView"
            tools:text="1. 45 Benar">
        </TextView>

        <TextView
            android:id="@+id/no2TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/no1TextView"
            tools:text="2. 30 Benar">
        </TextView>

        <TextView
            android:id="@+id/no3TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/no2TextView"
            tools:text="3. 50 Benar">
        </TextView>

        <TextView
            android:id="@+id/no4TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/no3TextView"
            tools:text="4. 65 Benar">
        </TextView>

        <TextView
            android:id="@+id/no5TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintTop_toBottomOf="@id/no4TextView"
            tools:text="5. 100 Salah">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>